# python_packaging_demo

./: setup.cfg
downloader/: cli.py  downloader.py
