[metadata]
name = over-simplified-downloader
version = 0.0.1
author = Liu Zheng
author_email = zheng@example.com
description = An over-simplified downloader package to demonstrate python module and tool packaging.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/liuzheng1990/python_packaging_demo
project_urls = 
    Bug Tracker = https://github.com/liuzheng1990/python_packaging_demo/issues
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.entry_points]
console_scripts =
    download = downloader.cli:main